# orchestrator

./: Cargo.toml  Dockerfile
src/: api.rs  main.rs
src/api/: add_wallets_to_wl.rs  api.rs  auth_api.rs  check_wallet_wl.rs  create_community.rs  generate_txn.rs  get_community_data.rs  get_members.rs  get_memberships.rs  get_ownerships.rs  get_wallets.rs  middleware.rs  mod.rs  process_payment.rs  remove_wallet_from_wl.rs  routes.rs  update_community_data.rs
src/models/: api_models.rs  community.rs  instruction_data.rs  license.rs  mod.rs  payment_details.rs  reg_data.rs  serialized_instruction.rs  token.rs  update_community_data.rs  user_info.rs
src/orchestrator/: authentication.rs  mod.rs  orchestrator.rs
