[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.132"
actix-web = "4.9.0"
reqwest = { version = "0.12.11", features = ["json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.22"
env_logger = "0.11.6"
solana-sdk = "2.1.7"
rand = "0.8.5"  # or the version you need
redis = "0.27.6"
actix-cors = "0.7.0"
chrono = "0.4.39"
futures = "0.3.31"
spl-token = "7.0.0"
solana-client = "2.1.8"
solana-transaction-status-client-types = "2.1.8"
futures-util = "0.3.31"

[dependencies.mongodb]
version = "3.1.1"
default-features = false
features = ["sync", "rustls-tls", "compat-3-0-0"]